# WebSpider

./: .gitignore  README.md  cookies.txt  main.py  pyproject.toml  test.py  test1.py
analysis/: AnalyzeRule.py  AnalyzeUrl.py  RuleAnalyzer.py  Syntax.py  analyze_rule.py  analyze_url.py  rule_analyzer.py  test.py
analysis/functions/: base.py  js_extend.py  jsonp.py  soup.py
task/: fetch.py
