[project]
name = "WebSpider"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "inkicchj", email = "399434428@qq.com"},
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "js2py>=0.74",
    "httpx>=0.27.2",
    "cache3>=0.4.3",
    "markdownify>=0.13.1",
    "orjson>=3.10.11",
    "jsonpath>=0.82.2",
    "fake-useragent>=1.5.1",
    "pydantic>=2.9.2",
    "lxml>=5.3.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
